--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dotenv>=0.9.9",
     "inspect-ai>=0.3.145",
     "ipykernel>=7.1.0",
     "jupyter>=1.1.1",
